--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "framer-motion": "^11.18.2",
+    "gsap": "^3.13.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
@@ -66,6 +67,7 @@
     "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.8.1",
     "react-resizable-panels": "^2.1.3",
+    "react-wrap-balancer": "^1.1.1",
     "recharts": "^2.12.7",
     "sonner": "^1.7.4",
     "stripe": "^18.2.1",
